// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification should not render when not visible 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notification
    isVisible={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Notification should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notification
    isVisible={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Circle
          cx="286.1"
          cy="61.8"
          fill="#FFFFFF"
          r="19"
        />,
        <Circle
          cx="285.8"
          cy="61.8"
          fill="#A64444"
          r="16"
        />,
        <Path
          d="M283.3,58.2c-0.2,0.2-0.5,0.3-0.8,0.3c-0.7,0-1.3-0.6-1.3-1.3c0-0.5,0.2-0.9,0.6-1.1l3.5-2.2   c0.3-0.2,0.5-0.3,0.8-0.3c0.7,0,1.4,0.6,1.4,1.4v13.8c0,0.7-0.6,1.4-1.4,1.4s-1.4-0.6-1.4-1.4V57.3L283.3,58.2z"
          fill="#FFFFFF"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "286.1",
          "cy": "61.8",
          "fill": "#FFFFFF",
          "r": "19",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "285.8",
          "cy": "61.8",
          "fill": "#A64444",
          "r": "16",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M283.3,58.2c-0.2,0.2-0.5,0.3-0.8,0.3c-0.7,0-1.3-0.6-1.3-1.3c0-0.5,0.2-0.9,0.6-1.1l3.5-2.2   c0.3-0.2,0.5-0.3,0.8-0.3c0.7,0,1.4,0.6,1.4,1.4v13.8c0,0.7-0.6,1.4-1.4,1.4s-1.4-0.6-1.4-1.4V57.3L283.3,58.2z",
          "fill": "#FFFFFF",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Circle
            cx="286.1"
            cy="61.8"
            fill="#FFFFFF"
            r="19"
          />,
          <Circle
            cx="285.8"
            cy="61.8"
            fill="#A64444"
            r="16"
          />,
          <Path
            d="M283.3,58.2c-0.2,0.2-0.5,0.3-0.8,0.3c-0.7,0-1.3-0.6-1.3-1.3c0-0.5,0.2-0.9,0.6-1.1l3.5-2.2   c0.3-0.2,0.5-0.3,0.8-0.3c0.7,0,1.4,0.6,1.4,1.4v13.8c0,0.7-0.6,1.4-1.4,1.4s-1.4-0.6-1.4-1.4V57.3L283.3,58.2z"
            fill="#FFFFFF"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "286.1",
            "cy": "61.8",
            "fill": "#FFFFFF",
            "r": "19",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "285.8",
            "cy": "61.8",
            "fill": "#A64444",
            "r": "16",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M283.3,58.2c-0.2,0.2-0.5,0.3-0.8,0.3c-0.7,0-1.3-0.6-1.3-1.3c0-0.5,0.2-0.9,0.6-1.1l3.5-2.2   c0.3-0.2,0.5-0.3,0.8-0.3c0.7,0,1.4,0.6,1.4,1.4v13.8c0,0.7-0.6,1.4-1.4,1.4s-1.4-0.6-1.4-1.4V57.3L283.3,58.2z",
            "fill": "#FFFFFF",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
